--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tv-maze-show",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://virysik.github.io/tv-maze-show",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
